--- a/GetJson.html
+++ b/GetJson.html
@@ -40,16 +40,22 @@
   	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
 	  <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
     <script src="http://mbostock.github.com/d3/d3.v2.js?2.8.1"></script>
+    <script src="js/jquery.jsonp-2.3.0.min.js"></script>
 </head>
 <body>
 	<div id="map"></div>
-  speed <input type="text" id="speed" width="100px" /> ms 
-  <input type="button" value="Auto Run" onclick="startAutoRender()" />
+  DS ID<input type="text" id="ds" width="50px" value="ds999" />
+  speed (ms)<input type="text" id="speed" width="100px" value="1000" />
+  <input type="button" value="Auto Run" onclick="startAutoRender();" />
   <input type="button" value="Stop" onclick="stopAutoRender()" />
-
-  <br />Progress: <span id="dots"></span>
+  <br />
+  Start <input type="text" id="start" width="100px" value="2013-08-05 "/> 
+  ... Stop <input type="text" id="end" width="100px" value="2013-08-10"/>
+  <input type="button" value="Get Data" onclick="getData();" />
+  <hr />
+  Progress: <span id="dots"></span>
   <div id="theme">Theme: </div>
-	<div id="content"></div>
+	<div id="content" style="height: 500px; float: left"></div>
   <!--http://colorbrewer2.org/?type=diverging&scheme=RdYlGn&n=5 -->
 	<script>
   /*
@@ -138,6 +144,59 @@
   // read geoJson file
   $.getJSON( jsonFile, renderFeatures);
 
+  // jsonFile += '/callback_function';
+  // $.jsonp({
+  //     "url" : jsonFile,
+  //     callback : "myFunction",
+  //     cache : "false",
+  //     success : function(data){
+  //       console.log("success");
+  //     }
+
+  // });
+
+  // Assign handlers immediately after making the request,
+  // and remember the jqxhr object for this request
+  // var jqxhr = $.getJSON( jsonFile, function(data) {
+  // console.log( "success" );
+  // renderFeatures(data);
+  
+  // })
+  // .done(function() {
+  // console.log( "second success" );
+  // })
+  // .fail(function() {
+  // console.log( "error" );
+  // })
+  // .always(function() {
+  // console.log( "complete" );
+  // });
+  // // Perform other work here ...
+  // // Set another completion function for the request above
+  // jqxhr.complete(function(data) {
+  // console.log( "second complete" );
+  // });
+  //function jsonCallback({"data":"mydata"});
+//   $.ajax({
+//     type: 'GET',
+//     url: jsonFile,
+//     //async: false,
+//     contentType: 'application/json',
+//     dataType: 'jsonp',
+//     crossDomain: true,
+//     jsonpCallback: 'renderFeatures', // specify the callback name if you're hard-coding it
+//     success: function(data){
+//       // we make a successful JSONP call!
+//       console.log("successful");
+//     }
+//   });
+  // var jsonData;
+  // $.ajax({
+  //   dataType: "json",
+  //   url: jsonFile,
+  //   data: jsonData,
+  //   success: renderFeatures
+  // });
  
   /*
     Thematic map visualization
@@ -155,8 +214,8 @@
              d > 50 ? '#fee08b'://'#FD8D3C' :
              d > 40 ? '#d9ef8b'://'#FEB24C' :
              d > 30 ? '#a6d96a':
-             d > 30 ? '#66bd63':
-             d > 30 ? '#1a9850'://'#FED976' :
+             d > 20 ? '#66bd63':
+             d > 10 ? '#1a9850'://'#FED976' :
                       '#006837';//'#FFEDA0';
   }
 
@@ -258,7 +317,16 @@
     if(geoLayer)
       map.removeLayer(geoLayer);
   }
-
+  function getData(){
+	  var mongoUrl = "http://vanilla.ics.uci.edu:8081/eventshoplinux/webresources/mongodb/eventshoplinux/";
+	  var ds = $('#ds').val();
+	  var sDate = $('#start').val();
+	  var eDate = $('#end').val();
+	  mongoUrl += ds +"/timerange/"+ sDate + "/" + eDate + "/startTimeStr";
+	  console.log(mongoUrl);
+	  $.getJSON( mongoUrl, renderFeatures);
+  }
+  
   // Custom Info Control
   var info = L.control();
 
@@ -338,7 +406,7 @@
         auto_is_on = 1;
       }
       t = setTimeout(function() {
-        if (counter < collection.length) {
+        if (counter < featureCollection.length) {
           $('#dots').append('*');
           addDot();
           selectedId = counter;
@@ -369,7 +437,7 @@ d3.json("data/collection_new.json", function(collection_new) {
 /* Add a LatLng object to each item in the dataset */
 collection_new[0].sttBoxGeoJson.features.forEach(function(d) {
 d.LatLng = new L.LatLng(d.geometry.coordinates[0][0][1],d.geometry.coordinates[0][0][0]);
-console.log(d.LatLng);
+//console.log(d.LatLng);
 })
 var feature = g.selectAll("circle")
 .data(collection_new[0].sttBoxGeoJson.features)
